--- a/app/src/main/res/layout/activity_my_drawer.xml
+++ b/app/src/main/res/layout/activity_my_drawer.xml
@@ -5,13 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".navigation_drawer.MyDrawerActivity"
-    tools:openDrawer="start">
+    tools:openDrawer="end">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#2196F3"
+            android:id="@+id/toolbar"
+            app:navigationIcon="@drawable/ic_menu"
+            app:title="This is Toolbar"
+            app:subtitle="This is SubTitle"
+            app:menu="@menu/my_menu"/>
 
     </RelativeLayout>
 
@@ -19,7 +27,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/my_menu"
+        android:id="@+id/navigationView"
+        app:headerLayout="@layout/header_layout"
         android:background="#4CAF50"
-        android:layout_gravity="start"/>
+        android:layout_gravity="end"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
