--- a/app/src/main/res/menu/add_menu.xml
+++ b/app/src/main/res/menu/add_menu.xml
@@ -6,4 +6,12 @@
         android:id="@+id/action_add"
         app:showAsAction="always"
         android:icon="@drawable/ic_add"/>
+
+    <item
+        android:title="add Favourites"
+        android:id="@+id/action_fav"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_heart_full"/>
+
+
 </menu>
