--- a/app/src/main/res/menu/my_menu.xml
+++ b/app/src/main/res/menu/my_menu.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:title="item 1"
         android:id="@+id/item1"
+        android:enabled="true"
+        app:showAsAction="always"
         android:icon="@drawable/ic_android"/>
     <item
         android:title="item 2"
