--- a/app/src/main/res/layout/planet_row_item.xml
+++ b/app/src/main/res/layout/planet_row_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="obj"
-            type="com.example.jigneshandroidtops.okhttp.Planet" />
+            type="com.example.jigneshandroidtops.okhttp.gson.ItemsItem" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -17,7 +17,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:padding="20dp"
-            android:background="#B0B0B0"
+            android:background="#ECBD78"
             android:layout_height="match_parent">
 
             <androidx.cardview.widget.CardView
@@ -53,7 +53,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvDes"
-                android:text="@{obj.des}"
+                android:text="@{obj.description}"
                 android:layout_below="@id/tvName"
                 android:layout_centerInParent="true"
                 android:layout_marginTop="20dp"
